[package]
name = "web_weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12", features = ["blocking"]}
clap = { version = "4.6.1", features = ["derive"] }
scraper = "0.23"
url = "2"
nonzero_ext = "0.3.0"
robotstxt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
